force-app/main/default/objects/Chamdo__c/Chamdo__c.object-meta.xml
<CustomObject>
    <label>Chamado</label>
    <nameField>
        <displayFormat>CH - {0000000000}</displayFormat>
        <label>Número do Chamado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chamados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>