force-app/main/default/objects/Chamdo__c/fields/Assunto__c.field-meta.xml
<CustomField>
    <fullName>Assunto__c</fullName>
    <label>Assunto</label>
    <length>120</length>
    <type>Text</type>
</CustomField>