force-app/main/default/objects/Chamdo__c/fields/Descri_o_do_Chamado__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_do_Chamado__c</fullName>
    <label>Descrição do Chamado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>