force-app/main/default/objects/Chamdo__c/fields/ID_Tag__c.field-meta.xml
<CustomField>
    <fullName>ID_Tag__c</fullName>
    <formula>Ativo__r.ID_Tag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID / Tag</label>
    <type>Text</type>
</CustomField>