force-app/main/default/objects/Chamdo__c/fields/N_mero_de_S_rie__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_S_rie__c</fullName>
    <formula>Ativo__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Série</label>
    <type>Text</type>
</CustomField>