force-app/main/default/objects/Chamdo__c/fields/Patrimonio__c.field-meta.xml
<CustomField>
    <fullName>Patrimonio__c</fullName>
    <formula>Ativo__r.patrimonio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patrimônio</label>
    <type>Text</type>
</CustomField>