force-app/main/default/objects/Chamdo__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAIXA</fullName>
            </value>
            <value>
                <fullName>MÉDIA</fullName>
            </value>
            <value>
                <fullName>ALTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>