force-app/main/default/objects/Chamdo__c/fields/Setor_do_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Setor_do_Equipamento__c</fullName>
    <formula>Ativo__r.Setor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setor do Equipamento</label>
    <type>Text</type>
</CustomField>