force-app/main/default/objects/Chamdo__c/fields/Status_do_Chamado__c.field-meta.xml
<CustomField>
    <fullName>Status_do_Chamado__c</fullName>
    <label>Status do Chamado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOVO</fullName>
                <default>true</default>
                <label>NOVO</label>
            </value>
            <value>
                <fullName>AGUARDANDO APROVAÇÃO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO MANUTENÇÃO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO ORÇAMENTO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO PEÇA</fullName>
            </value>
            <value>
                <fullName>EM ANDAMENTO</fullName>
            </value>
            <value>
                <fullName>EM MANUTENÇÃO</fullName>
            </value>
            <value>
                <fullName>FINALIZADO (CONCLUÍDO)</fullName>
            </value>
            <value>
                <fullName>CANCELADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>