force-app/main/default/objects/Chamdo__c/fields/Valor_de_Servi_os_de_Qualifica_o__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Servi_os_de_Qualifica_o__c</fullName>
    <label>Valor de Serviços de Qualificação</label>
    <summarizedField>Ordem_de_Servi_o__c.Valor_do_Servi_o__c</summarizedField>
    <summaryFilterItems>
        <field>Ordem_de_Servi_o__c.Tipo_do_Servi_o__c</field>
        <operation>equals</operation>
        <value>QUALIFICAÇÃO</value>
    </summaryFilterItems>
    <summaryForeignKey>Ordem_de_Servi_o__c.N_do_Chamado_Relacionado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>