force-app/main/default/objects/Chamdo__c/fields/Valor_Total_de_Outros_Servi_os__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_de_Outros_Servi_os__c</fullName>
    <label>Valor Total de Outros Serviços</label>
    <summarizedField>Ordem_de_Servi_o__c.Valor_do_Servi_o__c</summarizedField>
    <summaryFilterItems>
        <field>Ordem_de_Servi_o__c.Tipo_do_Servi_o__c</field>
        <operation>notEqual</operation>
        <value>MANUTENÇÃO PREVENTIVA, MANUTENÇÃO CORRETIVA, CALIBRAÇÃO, QUALIFICAÇÃO, ENSAIO DE SEG. ELÉTRICA</value>
    </summaryFilterItems>
    <summaryForeignKey>Ordem_de_Servi_o__c.N_do_Chamado_Relacionado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>