force-app/main/default/objects/Chamdo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assunto__c</columns>
    <columns>Ativo__c</columns>
    <columns>ID_Tag__c</columns>
    <columns>Setor_do_Equipamento__c</columns>
    <columns>Status_do_Chamado__c</columns>
    <columns>Prioridade__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>