force-app/main/default/objects/Chamdo__c/listViews/Chamados_Cancelados.listView-meta.xml
<ListView>
    <fullName>Chamados_Cancelados</fullName>
    <columns>NAME</columns>
    <columns>Assunto__c</columns>
    <columns>Ativo__c</columns>
    <columns>Marca__c</columns>
    <columns>Modelo__c</columns>
    <columns>N_mero_de_S_rie__c</columns>
    <columns>ID_Tag__c</columns>
    <columns>Status_do_Chamado__c</columns>
    <columns>Prioridade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_do_Chamado__c</field>
        <operation>equals</operation>
        <value>CANCELADO</value>
    </filters>
    <label>Chamados Cancelados</label>
    <sharedTo></sharedTo>
</ListView>