force-app/main/default/objects/Chamdo__c/listViews/Todos_Chamados_Finalizados.listView-meta.xml
<ListView>
    <fullName>Todos_Chamados_Finalizados</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Assunto__c</columns>
    <columns>Ativo__c</columns>
    <columns>ID_Tag__c</columns>
    <columns>Setor_do_Equipamento__c</columns>
    <columns>Status_do_Chamado__c</columns>
    <columns>Prioridade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_do_Chamado__c</field>
        <operation>equals</operation>
        <value>FINALIZADO (CONCLUÍDO)</value>
    </filters>
    <filters>
        <field>Status_do_Chamado__c</field>
        <operation>equals</operation>
        <value>FINALIZADO (NÃO CONCLUÍDO)</value>
    </filters>
    <label>Todos Chamados Finalizados</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>